@@ -1,3 +1,13 @@
+Summary of changes between libmikmod 3.3.2 and libmikmod 3.3.4 ():
+==========================================================================
+
+libmikmod 3.3.4 was released on XX-XXX-XXX.
+
+- Fix CVE-2006-3879 (Secunia 21196) for Graoumf tracker (gt2) loader.
+  (the loader is non-functional yet but the issue was there.)
+- Fix memory leaks in the  for Graoumf tracker (gt2) loader.
+
+
 Summary of changes between libmikmod 3.3.2 and libmikmod 3.3.3 ():
 ==========================================================================
 
